# ble_hacks

./: LICENSE  README.md  pyproject.toml
src/ble_hacks/GLASSES/: ble_2.py  ble_glasses_controller.py  data.csv  data.xlsx  notes.md  send_commands.py
src/ble_hacks/LSLED/: notes.md
